add Swiper and cards

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,8 @@
 
+<section class="swiper-container">
+  <div class="swiper-wrapper">
+    {{> profileSCard }}
+  </div>
+  <!-- Add Pagination -->
+  <div class="swiper-pagination"></div>
+</section>
