--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,13 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/stylesheets/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/swiper/swiper.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
     {{> nav }}
+
     {{{body}}}
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="/javascripts/bootstrap/bootstrap.min.js"></script>
+    <script src="/javascripts/swiper/swiper.min.js"></script>
+    <script src="/javascripts/main.js"></script>
   </body>
 </html>
