--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,3 +12,15 @@ body {
   padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+
+
+
+
+
+
+/* SE PUEDE BORRAR - PRUEBA HUGO */
+input {
+  border: 1px solid black;
+  background-color: blanchedalmond;
+}
+/* SE PUEDE BORRAR - PRUEBA HUGO */
