--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,1 +1,23 @@
-<h1>HELLOOO</h1>
+<div class="container">
+  
+  <div class="row fp-row align-items-center">
+    
+    <div class="col-md-4 mx-auto">
+      <section class="login-form text-center">
+        <form method="post" action="/login" role="login">
+          <img src="http://via.placeholder.com/150x150" class="img-fluid" alt="Logo" />
+          <input type="email" name="email" placeholder="Email" required class="form-control input-lg" value="joestudent@gmail.com" />
+          <input type="password" class="form-control input-lg" id="password" placeholder="Password" required="" />          
+          
+          <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Sign in</button>
+          <div>
+            <a href="#">Create account</a> or <a href="#">reset password</a>
+          </div>
+        </form>
+      </section>  
+      </div>
+    
+  </div>    
+  
+  
+</div>
