--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,26 +1,19 @@
-/* ---- reset ---- */
+/* SE PUEDE BORRAR - PRUEBA HUGO */
+input {
+  border: 1px solid black;
+  background-color: blanchedalmond; }
 
+/* SE PUEDE BORRAR - PRUEBA HUGO */
+/* ---- reset ---- */
 html {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
+
 *, *:before, *:after {
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
 body {
   margin: 0;
   padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: red; 
 }
-
-
-
-
-
-
-/* SE PUEDE BORRAR - PRUEBA HUGO */
-input {
-  border: 1px solid black;
-  background-color: blanchedalmond;
-}
-/* SE PUEDE BORRAR - PRUEBA HUGO */
