add: regster form + styles

--- a/public/sass/components/_forms.scss
+++ b/public/sass/components/_forms.scss
@@ -1,7 +1,24 @@
-
-/* SE PUEDE BORRAR - PRUEBA HUGO */
-input {
-  border: 1px solid black;
-  background-color: blanchedalmond;
+.user-form{
+  background: #fff;
+  padding: 32px;
+  .form-control+.form-control {
+    margin: .5rem 0;
+  }
+  .btn{
+    margin: 1rem 0;
+  }
+  .form-control{
+    border: none;
+    border-bottom: 1px solid #000;
+    border-radius: 0;
+    font-size: $form-text-size;
+    padding-left:0;
+    &:focus{
+      box-shadow: none;
+      border-bottom: 1px solid $primary_color; 
+    }
+  }
+  h2{
+    margin-top: 30px;
+  }
 }
-/* SE PUEDE BORRAR - PRUEBA HUGO */
