--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,29 +1,54 @@
-<h1>Welcome</h1>
-<form action="/auth/signup" method="post">
-
-  <label for="">Username</label>
-  <input type="text" name="username">
-
-  <label for="">Password:</label>
-  <input type="password" name="password">
-
-  <label for="">Email:</label>
-  <input type="email" name="email">
-
-  <label for="">City:</label>
-  <input type="text" name="city">
-
-  <label for="">Age:</label>
-  <input type="number" name="age">
-
-  <label for="">Highlights:</label>
-  <input type="text" name="highlights" maxlength="60">
-
-  <label for="">Biography:</label>
-  <input type="text" name="biography" maxlength="600">
-
-
-
-  <button type="submit">Sign Up</button>
-
-</form>
+<div class="container">
+  
+  <div class="row vh-100 align-items-center">
+    
+    <div class="col-md-5 mx-auto">
+      <section class="user-form">
+        <form method="post" action="/auth/signup" role="register">
+          
+          <img src="http://via.placeholder.com/150x90" class="img-fluid mb-5" alt="Logo" />
+          <div class="form-group">
+            <h2>Basic information</h2>
+            <input type="text" name="username" placeholder="Username" required class="form-control input-lg">
+            <input type="password" class="form-control input-lg" id="password" placeholder="Password" required>          
+            <input type="email" name="email" placeholder="Email" required class="form-control input-lg" >
+          </div>
+          <div class="form-group">
+            <input type="file" name="avatarUrl" class="form-control" placeholder="Upload your profile pic" aria-label="Upload profile pic">
+          </div>
+          <div class="form-group">
+            <h2>About me</h2>
+            <input type="text" name="fullname" placeholder="Full name" required class="form-control input-lg">
+            <input type="text" name="city" placeholder="City" required class="form-control input-lg">
+            <input type="text" name="age"  placeholder="Age" required class="form-control input-lg">          
+            <select class="form-control mr-sm-2" id="categories" name="category">
+              <option selected>Interests</option>
+              <option value="Music">Music</option>
+              <option value="Sports">Sports</option>
+              <option value="Party">Party</option>
+              <option value="Food">Food</option>
+              <option value="Culture">Culture</option>
+              <option value="Leisure">Leisure</option>
+              <option value="Games">Games</option>
+              <option value="Other">Other</option>
+            </select>
+            <input type="text" name="highlights" placeholder="Resume your interests in 60 chars" maxlength="60" required class="form-control input-lg">
+            <textarea class="form-control" placeholder="Add a small bio, max 200 chars" name="biography" rows="5"></textarea>
+            <input type="text" name="typeBeds"  placeholder="Nr of beds" required class="form-control input-lg">          
+            <input type="text" name="transport"  placeholder="Type if you have a car or other transport" required class="form-control input-lg">          
+          </div>
+          <div class="form-group">
+            <h2>Everything ready?</h2>
+            <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Sign up</button>
+            <div>
+              <span>Already have an account? </span><a href="/login">Log in</a>
+            </div>
+          </div>
+        </form>
+      </section>  
+      </div>
+    
+  </div>    
+  
+  
+</div>
