--- a/public/sass/base/_variables.scss
+++ b/public/sass/base/_variables.scss
@@ -1,6 +1,10 @@
+$navbar-height: 56px;
+
 //Colors
 $primary_color: orange;
 
+//Fonts
+$primary-text-font: 'Lato', sans-serif;
 //Font sizes
 $document-text-size: 14px;
 $form-text-size : .8rem;
