--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,10 +8,13 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  font-size: 14px;
+  font-family: "Lato", sans-serif; }
 
 .vh-100 {
   min-height: 100vh; }
+  .vh-100.top-section {
+    margin-top: -56px; }
 
 h2 {
   font-size: 1.2rem; }
@@ -19,16 +22,21 @@ h2 {
 .btn {
   border-radius: 0; }
 
+.form-top {
+  background: #ced4da;
+  padding: 32px;
+  color: #fff; }
+
 .user-form {
-  background: #fff;
-  padding: 32px; }
+  padding: 32px;
+  border: 1px solid #ced4da; }
   .user-form .form-control + .form-control {
     margin: .5rem 0; }
   .user-form .btn {
     margin: 1rem 0; }
   .user-form .form-control {
     border: none;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #ced4da;
     border-radius: 0;
     font-size: 0.8rem;
     padding-left: 0; }
