--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,6 +4,7 @@
     <title>LocalBuddy</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/swiper/swiper.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
