--- a/public/sass/modules/_main-structure.scss
+++ b/public/sass/modules/_main-structure.scss
@@ -10,11 +10,15 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: $document-text-size;
+  font-family: $primary-text-font;
 }
 
 .vh-100{
   min-height: 100vh;
+  &.top-section{
+    margin-top: -$navbar-height;
+  }
 }
 h2{
   font-size: $h2-text-size;
