--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,8 +1,8 @@
 <div class="container">
   
-  <div class="row vh-100 align-items-center">
+  <div class="row vh-100 align-items-center top-section">
     
-    <div class="col-md-4 mx-auto">
+    <div class="col-md-6 col-lg-5 mx-auto">
       <section class="login-form text-center">
         <form method="post" action="/login" role="login" class="user-form">
           
