--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container">
-      <div class="brand mr-auto"><a class="navbar-brand" href="#">LocalBuddy</a></div>
+      <div class="brand mr-auto"><a class="navbar-brand" href="/">LocalBuddy</a></div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">x</a>
-            <a class="nav-item nav-link" href="#">x</a>
+            <a class="nav-item nav-link" href="/login">Log in</a>
+            <a class="nav-item nav-link" href="/signup">Sign up</a>
             <a class="nav-item nav-link" href="#">x</a>
             <a class="nav-item nav-link" href="#">x</a>
           </div>
