add: currentUser in Session + logout button in nav + npm run seed

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -15,7 +15,7 @@
           <div class="form-group">
             <h2>Basic information</h2>
             <input type="text" name="username" placeholder="Username" required class="form-control input-lg">
-            <input type="password" class="form-control input-lg" id="password" placeholder="Password" required>          
+            <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" required>          
             <input type="email" name="email" placeholder="Email" required class="form-control input-lg" >
           </div>
           <div class="form-group">
