--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  
+  {{message}}
   <div class="row vh-100 align-items-center top-section">
     
     <div class="col-md-6 col-lg-5 mx-auto">
@@ -8,8 +8,8 @@
           
           <img src="http://via.placeholder.com/150x90" class="img-fluid mb-5" alt="Logo">
 
-          <input type="email" name="email" placeholder="Email" required class="form-control input-lg">
-          <input type="password" class="form-control input-lg" id="password" placeholder="Password" required>          
+          <input type="text" name="username" placeholder="Username" required class="form-control input-lg">
+          <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" required>          
           
           <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Sign in</button>
           <div>
