--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,5 +1,4 @@
 <div class="container mb-5 mt-5">
-  
   <div class="row vh-100 align-items-center">
     
     <div class="col-md-7 col-lg-5 mx-auto">
@@ -11,7 +10,7 @@
       </div>
 
       <section class="user-form">
-        <form method="post" action="/auth/signup" role="register">
+        <form method="post" action="/signup" role="register">
           <div class="form-group">
             <h2>Basic information</h2>
             <input type="text" name="username" placeholder="Username" required class="form-control input-lg">
@@ -39,7 +38,13 @@
             </select>
             <input type="text" name="highlights" placeholder="Resume your interests in 60 chars" maxlength="60" required class="form-control input-lg">
             <textarea class="form-control" placeholder="Add a small bio, max 200 chars" name="biography" rows="5"></textarea>
-            <input type="text" name="typeBeds"  placeholder="Nr of beds" required class="form-control input-lg">          
+            <select class="form-control mr-sm-2" name="typeBeds">
+              <option selected>What kind of bed?</option>
+              <option value="Single Bed">Single Bed</option>
+              <option value="Double Bed">Double Bed</option>
+              <option value="Couch">Couch</option>
+            </select>
+            <input type="text" name="bedsNumber"  placeholder="How many beds can you offer?" required class="form-control input-lg">          
             <input type="text" name="transport"  placeholder="Type if you have a car or other transport" required class="form-control input-lg">          
           </div>
           <div class="form-group">
@@ -51,9 +56,6 @@
           </div>
         </form>
       </section>  
-      </div>
-    
+    </div>
   </div>    
-  
-  
 </div>
