--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -18,7 +18,7 @@
             <input type="email" name="email" placeholder="Email" required class="form-control input-lg" >
           </div>
           <div class="form-group">
-            <input type="file" name="avatarUrl" class="form-control" placeholder="Upload your profile pic" aria-label="Upload profile pic">
+            <input type="file" name="avatarUrl" class="form-control" placeholder="Upload your profile pic" aria-label="Upload profile pic" default>
           </div>
           <div class="form-group">
             <h2>About me</h2>
@@ -45,7 +45,7 @@
               <option value="Couch">Couch</option>
             </select>
             <input type="text" name="bedsNumber"  placeholder="How many beds can you offer?" required class="form-control input-lg">          
-            <input type="text" name="transport"  placeholder="Type if you have a car or other transport" required class="form-control input-lg">          
+            <input type="text" name="transport"  placeholder="Type if you have a car or other transport" class="form-control input-lg">          
           </div>
           <div class="form-group">
             <h2 class="text-center">Everything ready?</h2>
