--- a/views/partials/profileSCard.hbs
+++ b/views/partials/profileSCard.hbs
@@ -1,6 +1,6 @@
 <div class="swiper-slide">
   <div class="card">
-    <img class="card-img-top" src="http://via.placeholder.com/150x75" alt="Card image cap">
+    <img class="card-img-top" src='/images/default-avatar.jpg'; alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{this.fullname}}</h5>
       <p class="city">{{this.city}}</p>
