--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -6,7 +6,7 @@
       <section class="login-form text-center">
         <form method="post" action="/login" role="login" class="user-form">
           
-          <img src="http://via.placeholder.com/150x90" class="img-fluid mb-5" alt="Logo">
+          <img src="http://via.placeholder.com/150x90" class="img-fluid mb-5 mx-auto d-block" alt="Logo">
 
           <input type="text" name="username" placeholder="Username" required class="form-control input-lg">
           <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" required>          
