--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,24 +1,29 @@
-<div class="container">
-  {{message}}
-  <div class="row vh-100 align-items-center top-section">
+<section class="login-section">
+  <div class="container">
     
-    <div class="col-md-6 col-lg-5 mx-auto">
-      <section class="login-form text-center">
-        <form method="post" action="/login" role="login" class="user-form">
-          
-          <img src="http://via.placeholder.com/150x90" class="img-fluid mb-5 mx-auto d-block" alt="Logo">
+    <div class="row vh-100 align-items-center top-section">
+      
+      <div class="col-md-6 col-lg-5 mx-auto">
+        <section class="login-form text-center">
+          <form method="post" action="/login" role="login" class="user-form">
+            
+            <img src="http://via.placeholder.com/150x90" class="img-fluid mb-5 mx-auto d-block" alt="Logo">
 
-          <input type="text" name="username" placeholder="Username" required class="form-control input-lg">
-          <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" required>          
-          
-          <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Sign in</button>
-          <div>
-            <a href="/signup">Create account</a> or <a href="#">reset password</a>
-          </div>
-        </form>
-      </section>  
+            <input type="text" name="username" placeholder="Username" required class="form-control input-lg">
+            <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" required>          
+            
+            <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Sign in</button>
+            
+            <footer>
+              <a href="/signup">Create account</a> or <a href="#">reset password</a>
+            </footer>
+
+          </form>
+        </section>  
+
+        <aside class="errormessage text-center mt-4">{{message}}</aside> 
+
       </div>
-    
-  </div>    
-  
-</div>
+    </div>    
+  </div>
+</section>
