add: slider partial + fix: css/sass

--- a/public/sass/base/_variables.scss
+++ b/public/sass/base/_variables.scss
@@ -5,8 +5,12 @@ $primary_color: orange;
 
 //Fonts
 $primary-text-font: 'Lato', sans-serif;
+
 //Font sizes
 $document-text-size: 14px;
 $form-text-size : .8rem;
 
 $h2-text-size : 1.2rem;
+
+//Forms
+$form-padding: 1rem;
