--- a/public/sass/components/_slider.scss
+++ b/public/sass/components/_slider.scss
@@ -1,5 +1,33 @@
+.swiper-container{
+  padding-bottom: 50px;
+}
 .swiper-slide{
+  .card-img-top{
+    height: 60px;
+  }
   .card-title{
     font-size: 1rem;
+    margin-bottom: 0;
+  }
+  .card-body{
+    padding: 1rem;
+  }
+  .city{
+    font-size: .8rem;
+    margin-bottom: 0;
+  }
+  .highlights{
+    margin-top: 5px;
+    font-size: 0.7rem;
+    margin-bottom: 0;
+    min-height: 32px;
+  }
+}
+
+@media (min-width: 768px) {
+  .swiper-slide{
+    .card-img-top{
+      height: 100px;
+    }
   }
 }
