--- a/public/sass/components/_forms.scss
+++ b/public/sass/components/_forms.scss
@@ -1,10 +1,10 @@
 .form-top{
   background: #ced4da;
-  padding: 32px;
+  padding: $form-padding;
   color: #fff;
 }
 .user-form{
-  padding: 32px;
+  padding: $form-padding;
   border: 1px solid #ced4da;
   .form-control+.form-control {
     margin: .5rem 0;
