--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,6 +17,10 @@ body {
     margin-top: -56px; }
 
 h2 {
+  font-size: 2rem;
+  font-weight: 700; }
+
+h2 {
   font-size: 1.2rem; }
 
 .btn {
@@ -24,11 +28,11 @@ h2 {
 
 .form-top {
   background: #ced4da;
-  padding: 32px;
+  padding: 1rem;
   color: #fff; }
 
 .user-form {
-  padding: 32px;
+  padding: 1rem;
   border: 1px solid #ced4da; }
   .user-form .form-control + .form-control {
     margin: .5rem 0; }
@@ -50,5 +54,45 @@ h2 {
 .errormessage {
   height: 30px; }
 
+.swiper-container {
+  padding-bottom: 50px; }
+
+.swiper-slide .card-img-top {
+  height: 60px; }
+
 .swiper-slide .card-title {
-  font-size: 1rem; }
+  font-size: 1rem;
+  margin-bottom: 0; }
+
+.swiper-slide .card-body {
+  padding: 1rem; }
+
+.swiper-slide .city {
+  font-size: .8rem;
+  margin-bottom: 0; }
+
+.swiper-slide .highlights {
+  margin-top: 5px;
+  font-size: 0.7rem;
+  margin-bottom: 0;
+  min-height: 32px; }
+
+@media (min-width: 768px) {
+  .swiper-slide .card-img-top {
+    height: 100px; } }
+
+.avatar {
+  position: absolute;
+  top: 25px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden; }
+
+@media (min-width: 556px) {
+  .avatar {
+    top: 35%;
+    right: 20px;
+    width: 60px;
+    height: 60px; } }
