--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,6 @@
 
 <section class="top-section mt-5">
   <div class="container">
-    <section class="swiper-container">
-      <div class="swiper-wrapper">
-        {{#each user}}
-          {{> profileSCard }}
-        {{/each}}
-      </div>
-      <!-- Add Pagination -->
-      <div class="swiper-pagination"></div>
-    </section>
+    {{> swiperslider }}
   </div>
 </section>
