--- a/public/sass/base/_variables.scss
+++ b/public/sass/base/_variables.scss
@@ -9,6 +9,8 @@ $primary-text-font: 'Lato', sans-serif;
 //Font sizes
 $document-text-size: 14px;
 $form-text-size : .8rem;
+$buddie-profile-name-size: 2rem;
+$buddie-profile-city-size: 1.3rem;
 
 $h2-text-size : 1.2rem;
 
