--- a/views/buddies/profile.hbs
+++ b/views/buddies/profile.hbs
@@ -1,1 +1,30 @@
-BUDDIE
+<section class="buddie-profile">
+  <div class="top-banner">
+    <div class="container pt-4">
+      <div class="buddie-info d-flex flex-column justify-content-between">
+        <div class="buddie-details">
+          <h2>{{this.fullname}}</h2>
+          <p class="city">{{this.city}}</p>
+        </div>
+        {{#if this.rate}}
+          <p class="rate">Rate: {{this.rate}}</p>
+        {{/if}}
+      </div>
+      <div class="avatar round">
+        <img class="profile-img img-fluid" src='/images/default-avatar.jpg'; alt="Card image cap">
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row mt-3">
+      <div class="col-md-8 mx-auto">
+        <h2>About me</h2>
+        <p class="age">Age: {{this.age}}</p>
+        <p>{{this.biography}}</p>
+        <p><strong>Highlights:</strong> <i>{{this.highlights}}</i></p>
+        <p><strong>In category:</strong> {{this.category}}</p>
+        <p><strong>Beds:</strong> {{this.bedsNumber}} {{this.typeBeds}}</p>
+      </div>
+    </div>
+  </div>
+</section>
