--- a/views/partials/profileSCard.hbs
+++ b/views/partials/profileSCard.hbs
@@ -1,11 +1,13 @@
-<div class="card">
-  <img class="card-img-top" src='https://wordup411ng.com/wp-content/uploads/2015/02/rainbow-wallpapers.jpg'; alt="Card image cap">
-  <div class="avatar round">
-    <img class="profile-img img-fluid" src='/images/default-avatar.jpg'; alt="Card image cap">
+<a href="/buddies/{{this.id}}">
+  <div class="card">
+    <img class="card-img-top" src='https://wordup411ng.com/wp-content/uploads/2015/02/rainbow-wallpapers.jpg'; alt="Card image cap">
+    <div class="avatar round">
+      <img class="profile-img img-fluid" src='/images/default-avatar.jpg'; alt="Card image cap">
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">{{this.fullname}}</h5>
+      <p class="city">{{this.city}}</p>
+      <p class="highlights"><i>{{this.highlights}}</i></p>
+    </div>
   </div>
-  <div class="card-body">
-    <h5 class="card-title">{{this.fullname}}</h5>
-    <p class="city">{{this.city}}</p>
-    <p class="highlights"><i>{{this.highlights}}</i></p>
-  </div>
-</div>
+</a>
