--- a/views/partials/profileSCard.hbs
+++ b/views/partials/profileSCard.hbs
@@ -1,8 +1,10 @@
 <a href="/buddies/{{this.id}}">
   <div class="card">
-    <img class="card-img-top" src='https://wordup411ng.com/wp-content/uploads/2015/02/rainbow-wallpapers.jpg'; alt="Card image cap">
-    <div class="avatar round">
-      <img class="profile-img img-fluid" src='/images/default-avatar.jpg'; alt="Card image cap">
+    <div class="card-top">
+      <img class="card-img-top" src='https://wordup411ng.com/wp-content/uploads/2015/02/rainbow-wallpapers.jpg'; alt="Card image cap">
+      <div class="avatar round">
+        <img class="profile-img img-fluid" src='/images/default-avatar.jpg'; alt="Card image cap">
+      </div>
     </div>
     <div class="card-body">
       <h5 class="card-title">{{this.fullname}}</h5>
