--- a/public/sass/components/_user.scss
+++ b/public/sass/components/_user.scss
@@ -1,6 +1,6 @@
 .avatar{
   position: absolute;
-  top: 25px;
+  bottom: -10px;
   right: 10px;
   width: 50px;
   height: 50px;
@@ -10,7 +10,6 @@
 
 @media (min-width: 556px) {
   .avatar{
-    top: 26%;
     right: 15px;
     width: 70px;
     height: 70px;
