--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,8 +59,18 @@ h2 {
   .swiper-container .swiper-pagination {
     display: none !important; }
 
+.swiper-slide a {
+  color: inherit; }
+
+.swiper-slide .card {
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px;
+  border: 1px solid rgba(0, 0, 0, 0.1); }
+
+.swiper-slide .card-top {
+  position: relative; }
+
 .swiper-slide .card-img-top {
-  height: 60px; }
+  height: 70px; }
 
 .swiper-slide .card-title {
   font-size: 1rem;
@@ -87,7 +97,7 @@ h2 {
 
 .avatar {
   position: absolute;
-  top: 25px;
+  bottom: -10px;
   right: 10px;
   width: 50px;
   height: 50px;
@@ -96,7 +106,6 @@ h2 {
 
 @media (min-width: 556px) {
   .avatar {
-    top: 26%;
     right: 15px;
     width: 70px;
     height: 70px; } }
@@ -112,7 +121,7 @@ h2 {
       font-size: 2rem;
       margin-bottom: 0; }
     .buddie-profile .top-banner .buddie-info .city {
-      font-weight: 100;
+      font-weight: 200;
       font-size: 1.3rem;
       margin-bottom: 0; }
   .buddie-profile .top-banner .rate {
