--- a/public/sass/components/_slider.scss
+++ b/public/sass/components/_slider.scss
@@ -7,6 +7,9 @@
 .swiper-slide{
   a{
     color: inherit;
+    &:hover{
+      text-decoration: none;
+    }
   }
   .card{
     box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px;
@@ -14,9 +17,11 @@
   }
   .card-top{
     position: relative;
+    background: $primary_color;
   }
   .card-img-top{
     height: 70px;
+    visibility: hidden;
   }
   .card-title{
     font-size: 1rem;
