--- a/views/buddies/profile.hbs
+++ b/views/buddies/profile.hbs
@@ -17,7 +17,7 @@
   </div>
   <div class="container">
     <div class="row mt-3">
-      <div class="col-md-8 mx-auto">
+      <div class="col-md-8">
         <h2>About me</h2>
         <p class="age">Age: {{this.age}}</p>
         <p>{{this.biography}}</p>
