--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,21 +99,6 @@ h2 {
   .swiper-container .swiper-pagination {
     display: block !important; } }
 
-.avatar {
-  position: absolute;
-  bottom: -10px;
-  right: 10px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  overflow: hidden; }
-
-@media (min-width: 556px) {
-  .avatar {
-    right: 15px;
-    width: 70px;
-    height: 70px; } }
-
 .buddie-profile .top-banner {
   color: #fff;
   background: orange; }
@@ -136,9 +121,22 @@ h2 {
     width: 140px;
     top: auto; }
 
+.avatar {
+  position: absolute;
+  bottom: -10px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden; }
+
 @media (min-width: 556px) {
   .mt-3 {
     margin-top: 3rem !important; }
   .buddie-profile .top-banner .avatar {
     height: 170px;
-    width: 170px; } }
+    width: 170px; }
+  .avatar {
+    right: 15px;
+    width: 70px;
+    height: 70px; } }
