add: view search, searchform to nav, buddies list view

--- a/public/sass/base/_variables.scss
+++ b/public/sass/base/_variables.scss
@@ -2,6 +2,7 @@ $navbar-height: 56px;
 
 //Colors
 $primary_color: orange;
+$border-color: #ced4da;
 
 //Fonts
 $primary-text-font: 'Lato', sans-serif;
