--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -4,6 +4,9 @@
         {{!-- <button class="" type="button"  aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button> --}}
+        <form action="/search">
+          <input type="text" name="city">
+        </form>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
