--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,7 +78,8 @@ h2 {
 
 .swiper-slide .card-title {
   font-size: 1rem;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  min-height: 40px; }
 
 .swiper-slide .card-body {
   padding: 1rem; }
@@ -91,7 +92,7 @@ h2 {
   margin-top: 5px;
   font-size: 0.7rem;
   margin-bottom: 0;
-  min-height: 32px; }
+  min-height: 50px; }
 
 @media (min-width: 768px) {
   .swiper-slide .card-img-top {
