Fix: user + signup

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -13,9 +13,9 @@
         <form method="post" action="/signup" role="register">
           <div class="form-group">
             <h2>Basic information</h2>
-            <input type="text" name="username" placeholder="Username" class="form-control input-lg">
-            <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" >          
-            <input type="email" name="email" placeholder="Email" class="form-control input-lg" >
+            <input type="text" name="username" placeholder="Username" class="form-control input-lg" required>
+            <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" required>          
+            <input type="email" name="email" placeholder="Email" class="form-control input-lg" required>
           </div>
        
           <div class="form-group">
