--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -12,7 +12,7 @@
             <input type="text" name="username" placeholder="Username" required class="form-control input-lg">
             <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" required>          
             
-            <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Sign in</button>
+            <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Login</button>
             
             <footer>
               <a href="/signup">Create account</a> or <a href="#">reset password</a>
