--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,10 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container">
       <div class="brand mr-auto"><a class="navbar-brand" href="/"><strong>LB</strong></a></div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span>
-        </button>
-        <form class="form-inline" action="/search">
+        <form class="form-inline mr-3" action="/search">
           <div class="input-group">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">#</span>
@@ -12,7 +9,10 @@
             <input type="text" class="form-control" placeholder="City" name="city" aria-label="City" aria-describedby="basic-addon1">
           </div>
         </form>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto">
               {{#if currentUser }}
                 <li>
