--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -4,23 +4,23 @@
     
     <div class="col-md-5 mx-auto">
       <section class="user-form">
-        <form method="post" action="/auth/signup" role="register">
+        <form method="post" action="/profile/edit" role="register">
           
           <img src="http://via.placeholder.com/150x90" class="img-fluid mb-5" alt="Logo" />
           <div class="form-group">
             <h2>Basic information</h2>
-            <input type="text" name="username" placeholder="Username" required class="form-control input-lg">
-            <input type="password" class="form-control input-lg" id="password" placeholder="Password" required>          
-            <input type="email" name="email" placeholder="Email" required class="form-control input-lg" >
+            <input type="text" name="username" placeholder="Username"  class="form-control input-lg">
+            <input type="password" class="form-control input-lg" id="password" placeholder="Password" >          
+            <input type="email" name="email" placeholder="Email"  class="form-control input-lg" >
           </div>
           <div class="form-group">
             <input type="file" name="avatarUrl" class="form-control" placeholder="Upload your profile pic" aria-label="Upload profile pic">
           </div>
           <div class="form-group">
             <h2>About me</h2>
-            <input type="text" name="fullname" placeholder="Full name" required class="form-control input-lg">
-            <input type="text" name="city" placeholder="City" required class="form-control input-lg">
-            <input type="text" name="age"  placeholder="Age" required class="form-control input-lg">          
+            <input type="text" name="fullname" placeholder="Full name"  class="form-control input-lg">
+            <input type="text" name="city" placeholder="City" class="form-control input-lg">
+            <input type="text" name="age"  placeholder="Age" class="form-control input-lg">          
             <select class="form-control mr-sm-2" id="categories" name="category">
               <option selected>Interests</option>
               <option value="Music">Music</option>
@@ -32,11 +32,11 @@
               <option value="Games">Games</option>
               <option value="Other">Other</option>
             </select>
-            <input type="text" name="highlights" placeholder="Resume your interests in 60 chars" maxlength="60" required class="form-control input-lg">
+            <input type="text" name="highlights" placeholder="Resume your interests in 60 chars" maxlength="60" class="form-control input-lg">
             <textarea class="form-control" placeholder="Add a small bio, max 200 chars" name="biography" rows="5"></textarea>
-            <input type="text" name="typeBeds"  placeholder="Nr of beds" required class="form-control input-lg">          
-            <input type="number" name="bedsNumber"  placeholder="Nr of beds" required class="form-control input-lg">          
-            <input type="text" name="transport"  placeholder="Type if you have a car or other transport" required class="form-control input-lg">          
+            <input type="text" name="typeBeds"  placeholder="Nr of beds" class="form-control input-lg">          
+            <input type="number" name="bedsNumber"  placeholder="Nr of beds" class="form-control input-lg">          
+            <input type="text" name="transport"  placeholder="Type if you have a car or other transport" class="form-control input-lg">          
           </div>
           <div class="form-group">
             <h2>Everything ready?</h2>
