add: calendar form to buddies profile, add: moment.js

--- a/public/sass/base/_variables.scss
+++ b/public/sass/base/_variables.scss
@@ -2,7 +2,7 @@ $navbar-height: 56px;
 
 //Colors
 $primary_color: orange;
-$border-color: #ced4da;
+$border-color: #e4e4e4;
 
 //Fonts
 $primary-text-font: 'Lato', sans-serif;
