--- a/views/partials/scripts.hbs
+++ b/views/partials/scripts.hbs
@@ -1,4 +1,5 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="/javascripts/bootstrap/bootstrap.min.js"></script>
 <script src="/javascripts/swiper/swiper.min.js"></script>
+<script src="/javascripts/moment/moment.min.js"></script>
 <script src="/javascripts/main.js"></script>
