Fix: profile/edit - Save info

--- a/public/sass/base/_variables.scss
+++ b/public/sass/base/_variables.scss
@@ -13,7 +13,10 @@ $form-text-size : .8rem;
 $buddie-profile-name-size: 2rem;
 $buddie-profile-city-size: 1.3rem;
 
+$h1-text-size : 2rem;
 $h2-text-size : 1.2rem;
+$h3-text-size : 1.2rem;
+$p-text-size: 1rem;
 
 //Forms
 $form-padding: 1rem;
