Add: reservation (no validation) route + view

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,11 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container">
       <div class="brand mr-auto"><a class="navbar-brand" href="/"><strong>LB</strong></a></div>
-        <form class="form-inline mr-3" action="/search">
+        <form class="form-inline" action="/search">
           <div class="input-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon1">#</span>
-            </div>
             <input type="text" class="form-control" placeholder="City" name="city" aria-label="City" aria-describedby="basic-addon1">
           </div>
         </form>
