--- a/views/buddies/profile.hbs
+++ b/views/buddies/profile.hbs
@@ -1,4 +1,4 @@
-<section class="buddie-profile">
+<section class="buddie-profile" id="buddie-profile">
   <div class="top-banner">
     <div class="container pt-4">
       <div class="buddie-info d-flex flex-column justify-content-between">
@@ -41,11 +41,14 @@
             </div>
             <div class="form-group row">
               <div class="col">
-                <button type="submit" class="btn btn-lg btn-primary btn-block">Book</button>
+                <button type="submit" id="book-buddy" class="btn btn-lg btn-primary btn-block">Book</button>
               </div>
             </div>
           </form>
         </section>
+        {{#if messages.length}}
+              {{#each messages}}<p>{{this}}</p>{{/each}}
+          {{/if}}
       </div>
     </div>
   </div>
