--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,12 +9,11 @@ body {
   margin: 0;
   padding: 0;
   font-size: 14px;
-  font-family: "Lato", sans-serif; }
+  font-family: "Lato", sans-serif;
+  padding-top: 56px; }
 
 .vh-100 {
   min-height: 100vh; }
-  .vh-100.top-section {
-    margin-top: -56px; }
 
 h2 {
   font-size: 2rem;
@@ -100,6 +99,77 @@ h2 {
   .swiper-container .swiper-pagination {
     display: block !important; } }
 
+.navbar-toggle-button {
+  position: fixed;
+  top: 20px;
+  right: 15px;
+  height: 27px;
+  width: 55px;
+  cursor: pointer;
+  z-index: 101;
+  transition: opacity .25s ease; }
+
+.navbar-toggle-button span {
+  background: #dfdfdf;
+  border: none;
+  height: 4px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all .35s ease;
+  cursor: pointer; }
+
+.navbar-toggle-button span:nth-of-type(2) {
+  top: 9px; }
+
+.navbar-toggle-button span:nth-of-type(3) {
+  top: 18px; }
+
+.navbar-toggle-button.open span.top {
+  transform: translateY(9px) translateX(0) rotate(45deg); }
+
+.navbar-toggle-button.open span.middle {
+  opacity: 0; }
+
+.navbar-toggle-button.open span.bottom {
+  transform: translateY(-9px) translateX(0) rotate(-45deg); }
+
+.navbar-toggle-button.open span {
+  background: #000; }
+
+.menu-container {
+  position: fixed;
+  background: #eeeeee;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .35s,visibility .35s,height .35s,width .35s;
+  overflow: hidden;
+  z-index: 100;
+  color: #fff; }
+
+.menu-container.open {
+  opacity: 1;
+  visibility: visible;
+  display: block;
+  height: 100%;
+  overflow: auto; }
+
+.menu {
+  font-size: 2rem;
+  text-align: center;
+  width: 100%;
+  margin-top: 50px;
+  list-style: none;
+  padding-left: 0; }
+  .menu a {
+    color: #000; }
+
 .buddie-profile .top-banner {
   color: #fff;
   background: orange; }
@@ -151,10 +221,10 @@ h2 {
 .buddies-list .buddie-info {
   height: 200px; }
 
-.jumbotron h1 {
-  font-size: 2rem;
-  padding: 5% 0; }
-
-.jumbotron p {
-  font-family: "Lato", sans-serif;
-  font-size: 1rem; }
+.jumbotron {
+  background-image: url("https://images.pexels.com/photos/248797/pexels-photo-248797.jpeg?auto=compress&cs=tinysrgb&h=350") h1;
+    background-image-font-size: 2rem;
+    background-image-padding: 5% 0; }
+  .jumbotron p {
+    font-family: "Lato", sans-serif;
+    font-size: 1rem; }
