--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 
-<section class="top-section mt-5">
+<section class="top-section">
   <div class="jumbotron text-center">
     <h1 class="display-6">Discover & Connect with People out of your city</h1>
     <p class="lead">LocalBuddy is the new platform where you can connect with thousands of friends to live experiences out of your city.</p>
