--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'components/buttons';
 @import 'components/forms';
 @import 'components/slider';
+@import 'components/navbar';
 
 // Views
 @import 'views/user';
