--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,11 +4,12 @@
 </div> --}}
 
 <section class="top-section">
-  <div class="jumbotron text-center">
+  <div class="jumbotron text-center" id="jumbo-header">
     <h1 class="display-6">Discover & Connect with People out of your city</h1>
     <p class="lead">LocalBuddy is the new platform where you can connect with thousands of friends to live experiences out of your city.</p>
     <p><a class="btn btn-lg btn-success" href="/signup" role="button">Sign up today</a></p>
   </div>
+</section>
 
   <div class="container">
     <h2>Meet our buddies</h2>
@@ -44,4 +45,3 @@
   </section>
 
 
-</section>
