fix: navbar organisation

--- a/public/sass/base/_variables.scss
+++ b/public/sass/base/_variables.scss
@@ -1,11 +1,11 @@
 $navbar-height: 56px;
 
 //Colors
-$primary_color: orange;
+$primary_color: #25797c;
 $border-color: #e4e4e4;
 
 //Fonts
-$primary-text-font: 'Lato', sans-serif;
+$primary-text-font: 'Maven Pro', sans-serif;
 
 //Font sizes
 $document-text-size: 16px;
