--- a/views/partials/swiperslider.hbs
+++ b/views/partials/swiperslider.hbs
@@ -7,5 +7,7 @@
     {{/each}}
   </div>
   <!-- Add Pagination -->
-  <div class="swiper-pagination"></div>
+  <!-- Add Arrows -->
+  {{!-- <div class="swiper-button-next"></div>
+  <div class="swiper-button-prev"></div> --}}
 </section>
