--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -1,3 +1,9 @@
+.navbar{
+  background: #fff;
+  .row{
+    width: 100%;
+  }
+}
 .navbar-toggle-button {
   position: fixed;
   top: 20px;
@@ -6,8 +12,8 @@
   width: 55px;
   cursor: pointer;
   z-index: 101;
-  transition: opacity .25s ease; }
-  .navbar-toggle-button span {
+  transition: opacity .25s ease;
+  span{
     background: #dfdfdf;
     border: none;
     height: 4px;
@@ -16,53 +22,64 @@
     top: 0;
     left: 0;
     transition: all .35s ease;
-    cursor: pointer; }
-    .navbar-toggle-button span:nth-of-type(2) {
-      top: 9px; }
-    .navbar-toggle-button span:nth-of-type(3) {
-      top: 18px; }
-      .navbar-toggle-button.open span.top {
-          transform: translateY(9px) translateX(0) rotate(45deg);
-      }
-      .navbar-toggle-button.open span.middle {
-          opacity: 0;
-      }
-      .navbar-toggle-button.open span.bottom {
-          transform: translateY(-9px) translateX(0) rotate(-45deg);
-      }
-      .navbar-toggle-button.open span {
-          background: #000;
-      }
-      .menu-container {
-        position: fixed;
-        background: #eeeeee;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 0;
-        opacity: 0;
-        visibility: hidden;
-        transition: opacity .35s,visibility .35s,height .35s,width .35s;
-        overflow: hidden;
-        z-index: 100; 
-        color: #fff;
+    cursor: pointer;
+    &:nth-of-type(2) {
+      top: 9px;
     }
-    .menu-container.open {
-        opacity: 1;
-        visibility: visible;
-        display: block;
-        height: 100%;
-        overflow: auto;   
-      }
-.menu{
-  font-size: 2rem;
-  text-align: center;
+    &:nth-of-type(2) {
+      top: 9px;
+    }
+    &:nth-of-type(3) {
+      top: 18px; 
+    }
+  }
+  &.open{
+    span.top{
+      transform: translateY(9px) translateX(0) rotate(45deg);
+    }
+    span.middle{
+      opacity: 0;
+    }
+    span.bottom {
+      transform: translateY(-9px) translateX(0) rotate(-45deg);
+    }
+    span {
+      background: #000;
+    }
+  }
+}
+
+.menu-container {
+  position: fixed;
+  background: #eeeeee;
+  top: 0;
+  bottom: 0;
+  left: 0;
   width: 100%;
-  margin-top: 50px;
-  list-style:none;
-  padding-left: 0;
-  a{
-    color: #000;
+  height: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .35s,visibility .35s,height .35s,width .35s;
+  overflow: hidden;
+  z-index: 100; 
+  color: #fff;
+  &.open{
+    opacity: 1;
+    visibility: visible;
+    display: block;
+    height: 100%;
+    overflow: auto;
+  }
+}
+
+.menu{
+width: 100%;
+margin-top: 50px;
+list-style:none;
+  li{
+    margin-top: 10px;
+    a{
+      color: #000;
+    }
   }
 }
