--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  font-family: "Lato", sans-serif;
+  font-family: "Maven Pro", sans-serif;
   padding-top: 56px; }
 
 .vh-100 {
@@ -45,9 +45,14 @@ h2 {
     padding-left: 0; }
     .user-form .form-control:focus {
       box-shadow: none;
-      border-bottom: 1px solid orange; }
+      border-bottom: 1px solid #25797c; }
   .user-form h2 {
     margin-top: 30px; }
+
+.searchform {
+  display: block; }
+  .searchform input {
+    width: 100%; }
 
 /*Errormessage*/
 .errormessage {
@@ -69,7 +74,7 @@ h2 {
 
 .swiper-slide .card-top {
   position: relative;
-  background: orange; }
+  background: #25797c; }
 
 .swiper-slide .card-img-top {
   height: 70px;
@@ -99,6 +104,11 @@ h2 {
   .swiper-container .swiper-pagination {
     display: block !important; } }
 
+.navbar {
+  background: #fff; }
+  .navbar .row {
+    width: 100%; }
+
 .navbar-toggle-button {
   position: fixed;
   top: 20px;
@@ -108,35 +118,30 @@ h2 {
   cursor: pointer;
   z-index: 101;
   transition: opacity .25s ease; }
-
-.navbar-toggle-button span {
-  background: #dfdfdf;
-  border: none;
-  height: 4px;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: all .35s ease;
-  cursor: pointer; }
-
-.navbar-toggle-button span:nth-of-type(2) {
-  top: 9px; }
-
-.navbar-toggle-button span:nth-of-type(3) {
-  top: 18px; }
-
-.navbar-toggle-button.open span.top {
-  transform: translateY(9px) translateX(0) rotate(45deg); }
-
-.navbar-toggle-button.open span.middle {
-  opacity: 0; }
-
-.navbar-toggle-button.open span.bottom {
-  transform: translateY(-9px) translateX(0) rotate(-45deg); }
-
-.navbar-toggle-button.open span {
-  background: #000; }
+  .navbar-toggle-button span {
+    background: #dfdfdf;
+    border: none;
+    height: 4px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all .35s ease;
+    cursor: pointer; }
+    .navbar-toggle-button span:nth-of-type(2) {
+      top: 9px; }
+    .navbar-toggle-button span:nth-of-type(2) {
+      top: 9px; }
+    .navbar-toggle-button span:nth-of-type(3) {
+      top: 18px; }
+  .navbar-toggle-button.open span.top {
+    transform: translateY(9px) translateX(0) rotate(45deg); }
+  .navbar-toggle-button.open span.middle {
+    opacity: 0; }
+  .navbar-toggle-button.open span.bottom {
+    transform: translateY(-9px) translateX(0) rotate(-45deg); }
+  .navbar-toggle-button.open span {
+    background: #000; }
 
 .menu-container {
   position: fixed;
@@ -152,27 +157,25 @@ h2 {
   overflow: hidden;
   z-index: 100;
   color: #fff; }
-
-.menu-container.open {
-  opacity: 1;
-  visibility: visible;
-  display: block;
-  height: 100%;
-  overflow: auto; }
+  .menu-container.open {
+    opacity: 1;
+    visibility: visible;
+    display: block;
+    height: 100%;
+    overflow: auto; }
 
 .menu {
-  font-size: 2rem;
-  text-align: center;
   width: 100%;
   margin-top: 50px;
-  list-style: none;
-  padding-left: 0; }
-  .menu a {
-    color: #000; }
+  list-style: none; }
+  .menu li {
+    margin-top: 10px; }
+    .menu li a {
+      color: #000; }
 
 .buddie-profile .top-banner {
   color: #fff;
-  background: orange; }
+  background: #25797c; }
   .buddie-profile .top-banner .container {
     position: relative; }
   .buddie-profile .top-banner .buddie-info {
@@ -222,7 +225,7 @@ h2 {
   height: 200px; }
 
 p {
-  font-family: "Lato", sans-serif;
+  font-family: "Maven Pro", sans-serif;
   font-size: 1.1rem; }
 
 h2 {
@@ -236,7 +239,7 @@ h2 {
     padding: 5% 0;
     margin: 20% 0 0 0; }
   .jumbotron p {
-    font-family: "Lato", sans-serif;
+    font-family: "Maven Pro", sans-serif;
     font-size: 1.1rem;
     font-weight: 500; }
 
