--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,44 +4,58 @@
 </div> --}}
 
 <section class="top-section">
-  <div class="jumbotron text-center" id="jumbo-header">
-    <h1 class="display-6">Discover & Connect with People out of your city</h1>
+  <div class="container">
+    <h1>Discover & Connect with People out of your city</h1>
     <p class="lead">LocalBuddy is the new platform where you can connect with thousands of friends to live experiences out of your city.</p>
+  </div>
+</section>
+
+<section>
+   <div class="jumbotron text-center" id="jumbo-header">
     <p><a class="btn btn-lg btn-success" href="/signup" role="button">Sign up today</a></p>
   </div>
 </section>
 
+<section class="meet-our-buddies">
   <div class="container">
     <h2>Meet our buddies</h2>
     {{> swiperslider }}
   </div>
+</section>
 
-  <section class="mid-section">
-    <div class="jumbotron row text-right" id="jumbo-mid">
-      <div class="col-3"></div>
-      <div class="lead col-9">
-        <h2>Hello</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque a cum nihil sapiente consequuntur laborum sunt qui. Eum blanditiis, nemo autem error praesentium, necessitatibus eligendi quibusdam vitae fuga quod cumque.</p>
-      </div>
+<section class="mid-section">
+  <div class="jumbotron text-right" id="jumbo-mid">
+    <div class="row">
+    <div class="lead col-md-9 ml-x">
+      <h2>Hello</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque a cum nihil sapiente consequuntur laborum sunt qui. Eum blanditiis, nemo autem error praesentium, necessitatibus eligendi quibusdam vitae fuga quod cumque.</p>
     </div>
-  </section>
-  
+    </div>
+  </div>
+</section>
+
+<section class="about-us">
   <div class="container marketing text-center">
     <div class="row">
       <div class="col-lg-4 mt-3">
         <h2 class="mt-3">Heading</h2>
         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-    </div>
-
-  <section class="botton-section">
-    <div class="jumbotron row text-left" id="jumbo-bottom">
-      <div class="lead col-9">
-        <h2>Hello</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit necessitatibus dolores autem sequi sint voluptatem dolorum inventore amet expedita ex. Dolorem repellendus necessitatibus, quibusdam veritatis suscipit officia commodi numquam obcaecati!</p>
-        
       </div>
-      <div class="col-3"></div>
     </div>
-  </section>
+  </div>
+</section>
+  
+<section class="botton-section">
+  <div class="jumbotron text-left" id="jumbo-bottom">
+    <div class="container">
+      <div class="row">
+        <div class="lead col-9">
+          <h2>Hello</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit necessitatibus dolores autem sequi sint voluptatem dolorum inventore amet expedita ex. Dolorem repellendus necessitatibus, quibusdam veritatis suscipit officia commodi numquam obcaecati!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
